attempt 1 at fixing color contrast

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color:#FF8A82;
+  background-color:#c5baba;
 
 /* html, body is coloring entire page pink*/
   
@@ -32,6 +32,9 @@ header {
   padding: 10px;
 }
 /*similair to header this is repeating the same thing but slightly diffrent aka smaller*/
+.foot {
+  color:#ffffff
+}
 main, p {
   text-align: center;
   font-size: 17px;
@@ -47,15 +50,20 @@ main, p {
 /*gave the picture some sizing */
 
 .btn {
-  background-color: green;
+  background-color: #a0fda0;
   border: 2px solid black;
-  color: black;
   padding: 3px 8px;
   text-align:center;
   display:inline-block;
   text-decoration:none;
 }
+.btn:visited{color:black}
 /*did not want links to be plain so I made them buttons*/
+
+
+
+
+
 hr {
 border:2px solid black;
   
@@ -67,3 +75,7 @@ border:2px solid black;
   width: 32em;
 }
 /*the one Im most proud of this one blocks the text together so its all centered in the middle of screen*/
+.contactlink:hover{color:yellow}
+.contactlink:visited{color:#000000}
+.contactlink:link{color:black}
+
